# vista-docs

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGES.md  CLAUDE.md  Makefile  README.md  add_toc_image_md.py  apply_quality_views.py  audit_frontmatter.py  chunk_sections.py  classify_vista_type.py  cprs_reports_guide.md  crossref_monograph.py  docs2md-plan.md  enrich_inventory.py  extract_entities.py  extract_monograph.py  fetch_vista.sh  git-access-fix.md  ingest_blank_appcode.py  ingest_monograph.py  pyproject.toml  readme.md  requirements.txt  sample-md.md  setup_venv.sh  test_ackq_images.py  vdl_inventory.csv  z-run-log.md
.github/workflows/: ci.yml
docs/: URL-pre-crawl-data-scan.md  fileman-api-wrapper-specification.md  vista-docs-structure.md  vista-docs-target-filesystem.md
docs/ACR/: acr_icd-10_rn_sd_5_3_593.docx  acr_icd-10_rn_sd_5_3_593.md  acr_p_pimstm.docx  acr_p_pimstm.md  acr_p_rn.docx  acr_p_rn.md  acr_p_um_appx.docx  acr_p_um_appx.md  acr_puse.docx  acr_puse.md
docs/CPRS/: OR_3_0_377_RN.docx  OR_3_0_377_RN.md  OR_3_0_377_setup.docx  OR_3_0_377_setup.md  cprsguitm.docx  cprsguitm.md  cprsguium.md  cprsguium_ro.docx  cprsguium_ro.md  cprsig.docx  cprsig.md  cprslmtm.docx  cprslmtm.md  cprssetup.docx  cprssetup.md  or_30_218_ig.docx  or_30_218_ig.md  or_30_280rn.docx  or_30_280rn.md  or_30_296rn.docx  or_30_296rn.md  or_30_304rn.docx  or_30_304rn.md  or_30_306_rn.docx  or_30_306_rn.md  or_30_312_rn.docx  or_30_312_rn.md  or_30_350_rn.docx  or_30_350_rn.md  or_30_385_rn.docx  or_30_385_rn.md  or_30_387_rn.docx  or_30_387_rn.md  or_30_420rn.docx  or_30_420rn.md  or_3_0_405_rn.docx  or_3_0_405_rn.md  or_3_0_405_setup_r.docx  or_3_0_405_setup_r.md  or_3_0_406_rn.docx  (+25 more)
docs/ECX/: ecx_3_tm.docx  ecx_3_tm.md  ecx_3_ug.md
docs/GMPL/: gmpl_2_0_49_rn.docx  gmpl_2_0_49_rn.md  gmpl_2_0_49_tm.docx  gmpl_2_0_49_tm.md  gmplum.docx  gmplum.md
docs/GMRA/: gmra_4_0_tm.docx  gmra_4_0_tm.md  gmra_4_0_um.docx  gmra_4_0_um.md  gmra_4_20_rn.docx  gmra_4_20_rn.md  gmra_4_23_rn.docx  gmra_4_23_rn.md  gmra_4_26_rn.docx  gmra_4_26_rn.md  gmra_4_50_rn.docx  gmra_4_50_rn.md
docs/GMRC/: consifc.docx  consifc.md  constm.md  consum.docx  consum.md
docs/GMRV/: vitl5_p22_rn.docx  vitl5_p22_rn.md  vitl5_p23_rn.docx  vitl5_p23_rn.md  vitl5_p3_rn.docx  vitl5_p3_rn.md  vitl5_rn.docx  vitl5_rn.md  vitl5_tm.docx  vitl5_tm.md  vitl5_um.docx  vitl5_um.md  vitl_5_p22_tm.docx  vitl_5_p22_tm.md  vitl_5_p22_um.docx  vitl_5_p22_um.md  vitl_5_p23_tm_change_pages.docx  (+3 more)
guides/: docs-as-code-guide.md  docx-to-markdown-impl.md  fileman-api-wrapper-specification.md  fileman-iris-implementation-guide.md  fileman-yottadb-implementation-guide.md  vdl-1-crawl.md  vdl-2-inventory.md  vdl-3-fetch.md  vdl-4-ingest.md  vdl-5-enrich.md  vdl-inventory-guide-final.md  vdl-inventory-guide.md  vista_guide.md  vista_packages_guide.md
pipeline/: README.md  apply_quality_views.py  audit_frontmatter.py  chunk_sections.py  extract_entities.py
reports/: cprs_pce_guide.md  cprs_pce_guide_v2.md  vista_cprs_arch_guide.md
scripts/: README.md  bootstrap.sh  corpus_survey.py  crossref_monograph.py  extract_monograph.py  fetch.py  fetch_guides.py  guides-manifest.json  ingest.py  ingest_blank_appcode.py  ingest_monograph.py  manifest.json  pilot_manifest.py  rebuild_gap_entries.py  survey-data-cprs.json  survey-data-hl7.json  survey-data.json  survey-report-adt.txt  survey-report-cprs.txt  survey-report-tiu.txt  survey-report-v2.txt  survey-report.txt  vdl_inventory.csv  verify_corpus.py
tests/: conftest.py  test_vista_docs.py
(+380 files in other folders)
