[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vista-docs"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "beautifulsoup4",
    "python-docx",
    "pyyaml",
    "click",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-watch",
    "pytest-randomly",
    "ruff",
    "mypy",
    "pre-commit",
    "types-requests",
    "types-PyYAML",
]

[project.scripts]
vista-docs = "vista_docs.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -x"
markers = [
    "network: marks tests that require live VA network access (deselect with '-m not network')",
    "slow: marks tests that are slow to run",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["src"]
# I/O thin layers are tested in integration/ only — exclude from unit test gate
omit = [
    "src/vista_docs/crawl/session.py",
    "src/vista_docs/crawl/crawler.py",
    "src/vista_docs/fetch/downloader.py",
    "src/vista_docs/ingest/converter.py",
    "src/vista_docs/ingest/runner.py",
    "src/vista_docs/enrich/runner.py",
    "src/vista_docs/enrich/sync.py",
    "src/vista_docs/survey/analyzer.py",
    "src/vista_docs/manifest/store.py",
    "src/vista_docs/cli/main.py",
    "src/vista_docs/config.py",
    "src/vista_docs/survey/detectors.py",   # covered via integration survey tests
    "src/vista_docs/analyze/runner.py",                # I/O layer — integration-tested only
    "src/vista_docs/analyze/consolidation_runner.py",  # I/O layer — integration-tested only
    "src/vista_docs/analyze/corpus_manifest_runner.py",  # I/O layer — integration-tested only
    "src/vista_docs/publish/runner.py",                 # I/O layer — integration-tested only
]

[tool.coverage.report]
fail_under = 95
show_missing = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Long strings in docstring examples and test string literals are unavoidable
"src/vista_docs/crawl/parser.py" = ["E501"]
"src/vista_docs/survey/analyzer.py" = ["E501"]
"tests/unit/test_postprocess.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
